--- a/css/aisles.css
+++ b/css/aisles.css
@@ -49,46 +49,6 @@ body {
       width: 300px;
   }
 
-  .skin .num-in {
-	background: #FFFFFF;
-	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
-	border-radius: 25px;
-	height: 40px;
-	width: 110px;
-  float: left;
-}
-
-.skin .num-in	span {
-  width: 40%;
-  display: block;
-  height: 40px;
-  float: left;
-  position: relative;
-}
-
-.skin .num-in span:before, .skin .num-in span:after {
-  content: '';
-  position: absolute;
-  background-color: #667780;
-  height: 2px;
-  width: 10px;
-  top: 50%;
-  left: 50%;
-  margin-top: -1px;
-  margin-left: -5px;
-}
-
-.skin .num-in span.plus:after {
-  transform: rotate(90deg);
-}
-
-.skin .num-in input {
-		float: left;
-		width: 20%;
-		height: 40px;
-		border: none;
-		text-align: center;
-}
 @media (min-width: 1025px) {
   .h-custom {
   height: 100vh !important;
@@ -96,7 +56,7 @@ body {
   }
   
   .card-registration .select-input.form-control[readonly]:not([disabled]) {
-  font-size: 1rem;
+  font-size: 0.5rem;
   line-height: 2.15;
   padding-left: .75em;
   padding-right: .75em;
@@ -128,4 +88,59 @@ body {
     overflow-x: auto !important;
     width: 100% !important;
   }
+  .skin-2 .num-in {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 25px;
+    height: 40px;
+    width: 110px;
+    float: left;
+  }
   
+  .skin-2 .num-in	span {
+    width: 40%;
+    display: block;
+    height: 40px;
+    float: left;
+    position: relative;
+  }
+  
+  .skin-2 .num-in span:before, .skin-2 .num-in span:after {
+    content: '';
+    position: absolute;
+    background-color: #667780;
+    height: 2px;
+    width: 10px;
+    top: 50%;
+    left: 50%;
+    margin-top: -1px;
+    margin-left: -5px;
+  }
+  
+  .skin-2 .num-in span.plus:after {
+    transform: rotate(90deg);
+  }
+  
+  .skin-2 .num-in input {
+      float: left;
+      width: 20%;
+      height: 40px;
+      border: none;
+      text-align: center;
+  }
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+
+  .inputcart {
+    width: 2.5em;
+    text-align: center;
+  }
